<resources>
    <string name="app_name">nmedia</string>
    <string name="nmedia">NMedia!!</string>
    <string name="textHeader">Netology. University of Internet Professions</string>
    <string name="textPublished">May 19 at 16:13</string>
    <string name="textBody">Hello, this is the new Netology! Once upon a time, Netology began with online marketing intensives. Then there were courses on design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals.</string>
    <string name="post_text">Post text</string>
    <string name="empty_text_error">Text is empty</string>
    <string name="description_post_like">Like by me</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="blank_message_text">Text is blank!</string>
    <string name="textEditPost">Edit post</string>
    <string name="textNewPost">New post</string>
    <string name="channel_remote_name">channel_remote_name</string>
    <string name="channel_remote_description">channel_remote_description</string>
    <string name="notification_user_liked">notification user liked!</string>
    <string name="notification_new_post">just add a new post:</string>
    <string name="empty_posts">empty posts!!</string>
    <string name="retry_loading">retry loading!!</string>
    <string name="error_loading">error loading !!</string>
</resources>