<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/mainContentPadding">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="Аватар-картинка"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/textHeader"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        android:text="@string/textPublished" />


    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Post menu
"       android:background="@android:color/transparent"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/textBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content"
        />

   <!-- <ImageButton
        android:id="@+id/likes"
        android:background="@android:color/transparent"
        android:layout_marginTop="10dp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@id/barrierLikes"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_like_border_24"
        tools:layout_editor_absoluteX="16dp" />-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/description_post_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierLikes"
        app:icon="@drawable/ic_like_border_24"
        style="@style/Widget.AppCompat.LikeCheckBox"

        />

    <TextView
        android:id="@+id/likesText"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:text="999k"
        app:layout_constraintBottom_toBottomOf="@+id/like"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toBottomOf="@+id/barrierLikes" />

    <ImageButton
        android:id="@+id/shares"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@id/likesText"
        app:layout_constraintTop_toBottomOf="@+id/barrierLikes"
        app:srcCompat="@drawable/ic_baseline_share_24" />

    <TextView
        android:id="@+id/sharesText"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:text="999k"
        app:layout_constraintBottom_toBottomOf="@+id/shares"
        app:layout_constraintStart_toEndOf="@id/shares"
        app:layout_constraintTop_toBottomOf="@+id/barrierLikes" />

    <ImageButton
        android:id="@+id/viewsImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@id/viewsText"
        app:layout_constraintTop_toBottomOf="@+id/barrierLikes"
        app:srcCompat="@drawable/ic_views_24" />

    <TextView
        android:id="@+id/viewsText"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="999k"
        app:layout_constraintBottom_toBottomOf="@+id/viewsImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierLikes" />


</androidx.constraintlayout.widget.ConstraintLayout>